hphp/hack/test/typecheck/typedef14.php.exp
File "typedef14.php", line 15, characters 11-15:
Unexpected typedef (Naming[2052])
File "typedef14.php", line 12, characters 6-10:
Definition is here
